# ChangeLog for app-editors/hteditor
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-editors/cvs-repo/gentoo-x86/app-editors/hteditor/ChangeLog,v 1.34 2007/10/02 23:00:24 dragonheart Exp $

*hteditor-2.0.10 (02 Oct 2007)

  02 Oct 2007; Daniel Black <dragonheart@gentoo.org>
  +hteditor-2.0.10.ebuild:
  version bump

  06 May 2007; Daniel Black <dragonheart@gentoo.org>
  -files/hteditor-gcc41.patch, -hteditor-0.9.0.ebuild,
  -hteditor-2.0.3.ebuild, -hteditor-2.0.4.ebuild:
  older versions punted

  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org> hteditor-2.0.ebuild:
  ppc stable

*hteditor-2.0.5 (22 Apr 2007)

  22 Apr 2007; Markus Rothe <corsair@gentoo.org> +hteditor-2.0.5.ebuild:
  version bump to 2.0.5 which fixes PowerPC64 handling; added ~ppc64; bug #175272

*hteditor-2.0.4 (21 Apr 2007)

  21 Apr 2007; Daniel Black <dragonheart@gentoo.org> hteditor-2.0.ebuild,
  hteditor-2.0.3.ebuild, +hteditor-2.0.4.ebuild:
  version bump. Thanks to author Sebastian. Remove unused inherit lines from
  previous versions

  21 Apr 2007; Raúl Porcel <armin76@gentoo.org> hteditor-2.0.ebuild:
  x86 stable wrt bug 175272

  20 Apr 2007; Christian Faulhammer <opfer@gentoo.org> hteditor-2.0.ebuild:
  stable amd64, bug  175272

*hteditor-2.0.3 (19 Apr 2007)

  19 Apr 2007; Daniel Black <dragonheart@gentoo.org>
  -files/hteditor-0.9.4-asneeded.patch,
  -files/hteditor-2.0_beta2-optionallzo.patch,
  -files/hteditor-2.0_beta2-regexneedstdlib.patch, -hteditor-0.9.1.ebuild,
  -hteditor-0.9.4.ebuild, -hteditor-2.0_beta2.ebuild,
  +hteditor-2.0.3.ebuild:
  version bump thanks to Sebastian Biallas in bug #169829

*hteditor-2.0 (08 Mar 2007)

  08 Mar 2007; Daniel Black <dragonheart@gentoo.org> +hteditor-2.0.ebuild:
  version bump as per bug #169829 thanks to Sebastian Biallas

*hteditor-2.0_beta2 (27 Jan 2007)

  27 Jan 2007; Daniel Black <dragonheart@gentoo.org>
  +files/hteditor-2.0_beta2-optionallzo.patch,