@@ -1,8 +1,8 @@
 DIST ht-2.0.10.tar.bz2 860163 RMD160 be83e91a07fdead0c1713078720629154756f933 SHA1 f45e593a4247c5a565f2a46dc04680281041cc08 SHA256 83d0d4d2ccef53a69490bfbf7ccb11c70f9416160a7446be4d919e67b4fa8c0a
 DIST ht-2.0.5.tar.bz2 855130 RMD160 4e45740d2d978200784505da8d3794c46be6712b SHA1 ab07acf802fa8fa1646a20ba4d886d34f6c8daa9 SHA256 d6bf6068ebd26b847f8fe3b6d0ad18af77972a9f308fc0c8fe1b1178ed5b8acb
 DIST ht-2.0.tar.bz2 854003 RMD160 06f61f6b09a31d04830c57c347a21160ac2e60ee SHA1 f8523815854b1ccc2a364babd0521533f6c5a194 SHA256 1d0025030fb9bb22b8b14043611fff5003e8cbc3a9689977b79c14eba0c6829f
-EBUILD hteditor-2.0.10.ebuild 883 RMD160 81985ff50cec05b9f01908d559000dd364c94f24 SHA1 10fcecc48ba190072ea856af8b4fc2a69e3f15d7 SHA256 8f840b463809d187c44460eb024b18c85ee318f9d3b80fca130c5700e89584bc
+EBUILD hteditor-2.0.10.ebuild 878 RMD160 3b2fa87d369b715425bce96a1f55448a26acdd06 SHA1 47d105c012f03d41a7d8bc135021d7aad64a39df SHA256 5ae6b6233cdfbeff422de7365741800a1ad50101969a5865741f899e2d18a348
 EBUILD hteditor-2.0.5.ebuild 878 RMD160 1c39fe3959dc9978574312ea15352939826c4b6a SHA1 2371c25642a74cce67af5e1e63bcebc2c0594b7c SHA256 7b283acba8de293c8461644e212d290ca226e15cecb458cb99f89d75cc259c60
 EBUILD hteditor-2.0.ebuild 869 RMD160 920395a022a71a8632b5eced92ec96c45b6adabf SHA1 c4d74d67f8912097f4547adc5ac34ed3ec1a2daf SHA256 7ba7b98f5b2dde00586f4ec501b36fcf42280f496a652560ae6ed5f96bc4e8ea
-MISC ChangeLog 5828 RMD160 6f5ea0ecfdb477ecaf8bc150350523f3a8cce953 SHA1 8f81eaec0f18974d436bc4c8b390af24a1c5766f SHA256 c4bb7fb8dcb0290b6e8c364894b938678368da3847e8f3dd32a0fde007209659
+MISC ChangeLog 5911 RMD160 9421f1b70cfb1b79760c08da4eef986c4b51f864 SHA1 1762251223afc3547ff324b140e1d7925e5696ee SHA256 14bad83c391afab8ebb43d612d797afa94da4e20e9195261eca397a0d6de442f
 MISC metadata.xml 230 RMD160 df46c6fe6aecbf764587ac6f76f0bbb5ba9a62d7 SHA1 410310eb018b0f84121dab6c9520675be6985a5d SHA256 ce5541de8411e3693cbcbe7a9a68cf451206ab15240cedcbd49f6f67c24ef88b
