@@ -1,6 +1,6 @@
-# Copyright 1999-2007 Gentoo Foundation
+# Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-editors/cvs-repo/gentoo-x86/app-editors/hteditor/Attic/hteditor-2.0.10.ebuild,v 1.1 2007/10/02 23:00:24 dragonheart Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-editors/cvs-repo/gentoo-x86/app-editors/hteditor/Attic/hteditor-2.0.10.ebuild,v 1.2 2008/03/26 15:36:12 armin76 Exp $
 
 MY_PV=${PV/_/}
 DESCRIPTION="editor for executable files"
@@ -9,7 +9,7 @@ SRC_URI="mirror://sourceforge/hte/ht-${MY_PV}.tar.bz2"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~amd64 ~ppc ~ppc64 ~x86"
+KEYWORDS="~amd64 ~ppc ~ppc64 x86"
 IUSE="X"
 
 RDEPEND="
