@@ -1,6 +1,9 @@
 # ChangeLog for app-editors/hteditor
-# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-editors/cvs-repo/gentoo-x86/app-editors/hteditor/ChangeLog,v 1.34 2007/10/02 23:00:24 dragonheart Exp $
+# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/app-editors/cvs-repo/gentoo-x86/app-editors/hteditor/ChangeLog,v 1.35 2008/03/26 15:36:12 armin76 Exp $
+
+  26 Mar 2008; Raúl Porcel <armin76@gentoo.org> hteditor-2.0.10.ebuild:
+  x86 stable
 
 *hteditor-2.0.10 (02 Oct 2007)
 
